feat: Added cancel appointment endpoint
